--- a/irssi/.irssi/config
+++ b/irssi/.irssi/config
@@ -2,14 +2,18 @@ servers = (
   {
     address = "irc.oftc.net";
     chatnet = "OFTC";
-    port = "6667";
+    port = "6697";
+    use_ssl = "yes";
+    ssl_verify = "yes";
+    ssl_cert = "~/.irssi/irssi.pem";
   },
   {
     address = "chat.freenode.net";
     chatnet = "Freenode";
     port = "7000";
     use_ssl = "yes";
-    ssl_verify = "no";
+    ssl_verify = "yes";
+    ssl_cert = "~/.irssi/irssi.pem";
   }
 );
 
