--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -149,7 +149,7 @@ set $bg-color 	         #2B2B2B
 set $inactive-bg-color   #000000
 set $text-color          #DCDCCC
 set $inactive-text-color #656555
-set $urgent-bg-color     #CC9393
+set $urgent-bg-color     #BC8383
 set $border-color        #ffffff
 
 # window colors
@@ -157,7 +157,7 @@ set $border-color        #ffffff
 client.focused          $bg-color           $bg-color          $text-color          $border-color
 client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color $border-color
 client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color $border-color
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $border-color
+client.urgent           $urgent-bg-color    $urgent-bg-color   $inactive-bg-color   $border-color
 
 # bar
 bar {
@@ -168,7 +168,7 @@ bar {
 		#                  border             background         text
 		focused_workspace  $inactive-bg-color $inactive-bg-color $text-color
 		inactive_workspace $bg-color          $bg-color          $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $inactive-bg-color
 	}
 }
 
