--- a/irssi/.irssi/config
+++ b/irssi/.irssi/config
@@ -24,17 +24,12 @@ chatnets = {
     max_msgs = "4";
     max_whois = "1";
   };
-  OFTC = {
-    type = "IRC";
-    max_kicks = "1";
-    max_msgs = "1";
-    max_whois = "1";
-  };
+  OFTC = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
 };
 
 channels = (
   { name = "#freenode"; chatnet = "Freenode"; autojoin = "No"; },
-  { name = "#oftc"; chatnet = "OFTC"; autojoin = "No"; },
+  { name = "#oftc"; chatnet = "OFTC"; autojoin = "No"; }
 );
 
 aliases = {
@@ -290,15 +285,19 @@ statusbar = {
   };
 };
 settings = {
-  core = { real_name = "George Kettleborough"; user_name = "gpk"; nick = "gpk"; };
+  core = {
+    real_name = "George Kettleborough";
+    user_name = "gpk";
+    nick = "gpk";
+  };
   "fe-text" = { actlist_sort = "refnum"; };
   "fe-common/core" = {
     autolog = "yes";
     autolog_path = "~/.irssi/logs/$tag/$0.log";
+    beep_when_away = "yes";
+    beep_msg_level = "MSGS NOTICES DCC DCCMSGS HILIGHT";
   };
-  "perl/core/scripts" = {
-    hilightwin_showprivmsg = "no";
-  };
+  "perl/core/scripts" = { hilightwin_showprivmsg = "no"; };
 };
 windows = {
   1 = { immortal = "yes"; name = "(status)"; level = "ALL"; };
@@ -308,3 +307,4 @@ mainwindows = {
   1 = { first_line = "10"; lines = "100"; };
   2 = { first_line = "1"; lines = "10"; };
 };
+logs = { };
