--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -8,13 +8,14 @@ general {
 }
 
 order += "disk /"
+order += "disk /mnt/oldhome/"
 order += "run_watch DHCP"
-order += "wireless wlan0"
-order += "ethernet enp4s0"
-order += "battery 1"
+order += "ethernet eno1"
 order += "load"
 order += "cpu_usage"
 order += "cpu_temperature 0"
+order += "cpu_temperature 1"
+order += "cpu_temperature 2"
 order += "tztime local"
 
 wireless wlan0 {
@@ -22,7 +23,7 @@ wireless wlan0 {
         format_down = "W"
 }
 
-ethernet enp4s0 {
+ethernet eno1 {
         # if you use %speed, i3status requires the cap_net_admin capability
         format_up = "E: %ip (%speed)"
         format_down = "E"
@@ -62,7 +63,7 @@ tztime local {
 }
 
 load {
-        format = "%5min"
+        format = "%1min %5min %15min"
 	max_threshold = 1
 }
 
@@ -70,9 +71,24 @@ cpu_usage {
 	format = "%cpu0 %cpu1"
 }
 
+# case
 cpu_temperature 0 {
         format = "%degrees °C"
         path = "/sys/class/thermal/thermal_zone0/temp"
+	max_threshold = 35
+}
+
+# cpu0
+cpu_temperature 1 {
+        format = "%degrees °C"
+        path = "/sys/class/thermal/thermal_zone2/temp"
+	max_threshold = 60
+}
+
+# cpu1
+cpu_temperature 2 {
+        format = "%degrees °C"
+        path = "/sys/class/thermal/thermal_zone2/temp"
 	max_threshold = 60
 }
 
@@ -80,3 +96,6 @@ disk "/" {
         format = "/ %free free"
 }
 
+disk "/mnt/oldhome/" {
+        format = "oldroot %free free"
+}
