--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -4,7 +4,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:DejaVu Sans 7
+font pango:DejaVu Sans Mono 6
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -161,7 +161,7 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $inactive-bg-colo
 
 # bar
 bar {
-  	status_command i3status
+  	status_command i3blocks
 	colors {
 		background $bg-color
 	    	separator #757575
