Update ssh config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -9,3 +9,13 @@ Host gitlab.com
      IdentitiesOnly yes
      IdentityFile ~/.ssh/id_gitlab
      user git
+
+Host raspberrypi
+     IdentitiesOnly yes
+     IdentityFile ~/.ssh/id_pi
+     User pi
+
+Host mini-server
+     IdentitiesOnly yes
+     IdentityFile ~/.ssh/id_mini-server
+     User gk
