--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -29,7 +29,9 @@ bindsym $mod+Shift+x exec i3lock --color 475263
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run
+bindsym $mod+Shift+Return exec rofi -show ssh
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
