--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -19,3 +19,8 @@ Host mini-server
      IdentitiesOnly yes
      IdentityFile ~/.ssh/id_mini-server
      User gk
+
+Host kodi
+     IdentitiesOnly yes
+     IdentityFile ~/.ssh/id_kodi
+     User root
