--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,3 +3,11 @@
 	name = George Kettleborough
 [url "https://code.orgmode.org/"]
 	insteadOf = git@code.orgmode.org:
+[alias]
+	lol = log --graph --decorate --pretty=oneline --abbrev-commit
+	lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
+[color]
+	branch = auto
+	diff = auto
+	interactive = auto
+	status = auto
