--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -21,7 +21,7 @@ font pango:Ubuntu Mono 6
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xterm
 
 bindsym $mod+Shift+x exec i3lock --color 475263
 
