[mpv] Get rid of nvidia

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,5 @@
-vo=vdpau
-hwdec=vdpau
+vo=vaapi
+hwdec=vaapi
 opengl-backend=x11
 
 ytdl-format="bestvideo[ext=mp4][height<=?1080]+bestaudio[ext=m4a]/best[ext=mp4][height<=?1080]/best"
