[ssh] Add work names

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -24,3 +24,17 @@ Host kodi
      IdentitiesOnly yes
      IdentityFile ~/.ssh/id_kodi
      User root
+
+Host ubuntu-work
+     Hostname 192.168.1.248
+     IdentityFile ~/.ssh/id_gk-work
+     User gk-work
+
+Host work
+     Hostname owldesklx01
+     ProxyCommand ssh -qxT -i ~/.ssh/id_gk-work gk-work@192.168.1.248 nc %h %p
+     User george.kettleborough
+     IdentityFile ~/.ssh/id_work
+     ServerAliveInterval 300
+     ServerAliveCountMax 2
+
