[mpv] Fix mpv outputs for sway

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,6 +1,6 @@
-vo=vaapi
-hwdec=vaapi
-opengl-backend=x11
+vo=gpu
+# hwdec=vaapi
+# opengl-backend=wayland
 
 ytdl-format="bestvideo[ext=mp4][height<=?1080]+bestaudio[ext=m4a]/best[ext=mp4][height<=?1080]/best"
 
