--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,3 +15,8 @@
 	user = georgek
 [push]
 	followTags = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
