[mpv] re-enable hardware decoding

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,6 +1,6 @@
 vo=gpu
-# hwdec=vaapi
-# opengl-backend=wayland
+hwdec=vaapi
+gpu-context=wayland
 
 ytdl-format="bestvideo[ext=mp4][height<=?1080]+bestaudio[ext=m4a]/best[ext=mp4][height<=?1080]/best"
 
