[ssh] Add freenas

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -36,3 +36,7 @@ Host work
      IdentityFile ~/.ssh/id_work
      ServerAliveInterval 300
      ServerAliveCountMax 2
+
+Host freenas
+     User gpk
+     IdentityFile ~/.ssh/id_freenas
