[ssh] Add new hosts; retire old hosts

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -10,25 +10,10 @@ Host gitlab.com
      IdentityFile ~/.ssh/id_gitlab
      user git
 
-Host raspberrypi
-     IdentitiesOnly yes
-     IdentityFile ~/.ssh/id_pi
-     User pi
-
-Host mini-server
-     IdentitiesOnly yes
-     IdentityFile ~/.ssh/id_mini-server
-     User gk
-
 Host kodi
      IdentitiesOnly yes
      IdentityFile ~/.ssh/id_kodi
      User root
-
-Host ubuntu-work
-     Hostname 192.168.1.248
-     IdentityFile ~/.ssh/id_gk-work
-     User gk-work
 
 Host work
      Hostname owldesklx22
@@ -38,5 +23,19 @@ Host work
      ServerAliveCountMax 2
 
 Host freenas
+     Hostname 192.168.1.100
      User gpk
      IdentityFile ~/.ssh/id_freenas
+
+Host matrix
+     Hostname 192.168.1.2
+     User gpk
+     IdentityFile ~/.ssh/id_matrix
+
+Host pfsense
+     User gpk
+     IdentityFile ~/.ssh/id_pfsense
+
+Host mouse
+     User pi
+     IdentityFile ~/.ssh/id_mouse
