[ssh] Update host config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -22,7 +22,7 @@ Host work
      ServerAliveInterval 300
      ServerAliveCountMax 2
 
-Host freenas
+Host tank
      Hostname 10.17.0.2
      User gpk
      IdentityFile ~/.ssh/id_freenas
