[ssh] Add sourcehut config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -10,6 +10,11 @@ Host gitlab.com
      IdentityFile ~/.ssh/id_gitlab
      user git
 
+Host git.sr.ht
+     IdentitiesOnly yes
+     IdentityFile ~/.ssh/id_sourcehut
+     user git
+
 Host kodi
      IdentitiesOnly yes
      IdentityFile ~/.ssh/id_kodi
