--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -139,7 +139,10 @@ bindsym $mod+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
+bindsym $mod+minus scratchpad show; opacity 0.9
+
+bindsym --whole-window $mod+button4 opacity plus 0.1
+bindsym --whole-window $mod+button5 opacity minus 0.1
 
 mode "resize" {
      # left will shrink the containers width
