--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -15,8 +15,7 @@ set $right semicolon
 set $term alacritty
 
 # launcher
-set $menu rofi -show run | xargs swaymsg exec
-set $sshmenu rofi -show ssh | xargs swaymsg exec
+set $menu bemenu-gk | xargs swaymsg exec
 
 ### outputs
 output HDMI-A-2 {
