--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -22,6 +22,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec xterm
+bindsym $mod+Shift+Return exec xterm -class floating
 
 bindsym $mod+Shift+x exec i3lock --color 475263
 
@@ -31,7 +32,7 @@ bindsym $mod+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
 bindsym $mod+d exec rofi -show run
-bindsym $mod+Shift+Return exec rofi -show ssh
+# bindsym $mod+Shift+Return exec rofi -show ssh
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -189,5 +190,7 @@ exec redshift
 
 ### app specific settings
 for_window [class="SpeedCrunch"] floating enable resize set 400 300
-for_window [class="keepassxc"] floating enable, resize set 800 600
+for_window [class="keepassxc"] floating enable resize set 800 600
 for_window [class="Transmission-gtk"] floating enable
+
+for_window [class="floating"] floating enable move position center
