--- a/i3/.config/i3blocks/config
+++ b/i3/.config/i3blocks/config
@@ -10,10 +10,24 @@ command=uname -sr
 interval=once
 
 [org]
-command=/home/george.kettleborough/.config/i3blocks/git_status
-GIT_REPO=/home/george.kettleborough/org
+command=$HOME/.config/i3blocks/git_status
+GIT_REPO=~/org
 GIT_UPSTREAM=origin/master
-interval=10
+interval=60
+markup=pango
+
+[.emacs.d]
+command=$HOME/.config/i3blocks/git_status
+GIT_REPO=~/.emacs.d
+GIT_UPSTREAM=origin/master
+interval=60
+markup=pango
+
+[dotfile]
+command=$HOME/.config/i3blocks/git_status
+GIT_REPO=~/dotfiles
+GIT_UPSTREAM=origin/master
+interval=60
 markup=pango
 
 [pulse_control]
