[ssh] Update conf

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -37,10 +37,7 @@ Host matrix
      User gpk
      IdentityFile ~/.ssh/id_matrix
 
-Host pfsense
+Host xcp-ng
      User gpk
-     IdentityFile ~/.ssh/id_pfsense
-
-Host mouse
-     User pi
-     IdentityFile ~/.ssh/id_mouse
+     Hostname xcp-ng.home.arpa
+     IdentityFile ~/.ssh/id_xcp-ng
