Add SSH configs

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -27,6 +27,11 @@ Host work
      ServerAliveInterval 300
      ServerAliveCountMax 2
 
+Host opnsense
+     Hostname 10.17.0.1
+     User root
+     IdentityFile ~/.ssh/id_opnsense
+
 Host tank
      Hostname 10.17.0.2
      User gpk
@@ -41,3 +46,28 @@ Host xcp-ng
      User gpk
      Hostname xcp-ng.home.arpa
      IdentityFile ~/.ssh/id_xcp-ng
+
+Host xoce
+     User gpk
+     Hostname xoce.home.arpa
+     IdentityFile ~/.ssh/id_github
+
+Host ubuntu-01
+     User gpk
+     Hostname ubuntu-01.home.arpa
+     IdentityFile ~/.ssh/id_github
+
+Host ubuntu-node-1
+     User gpk
+     Hostname ubuntu-node-1.home.arpa
+     IdentityFile ~/.ssh/id_github
+
+Host ubuntu-node-2
+     User gpk
+     Hostname ubuntu-node-2.home.arpa
+     IdentityFile ~/.ssh/id_github
+
+Host ubuntu-node-3
+     User gpk
+     Hostname ubuntu-node-3.home.arpa
+     IdentityFile ~/.ssh/id_github
