--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -185,6 +185,9 @@ mode "$screenshot" {
 
 bindsym Print mode "$screenshot"
 
+# audio
+exec gentoo-pipewire-launcher restart &
+
 # clipboard
 exec wl-paste -t text --watch clipman store --max-items 1024 --no-persist
 bindsym $mod+y exec clipman pick --tool=wofi --max-items=30
