[direnv] Tweak uv layouts

--- a/direnv/.direnvrc
+++ b/direnv/.direnvrc
@@ -70,7 +70,7 @@ layout_hatch() {
     export VIRTUAL_ENV
 }
 
-layout_uv() {
+layout_uv_central() {
     local xdg_data_home="${XDG_DATA_HOME:-$HOME/.local/share}"
     local venv_path=$xdg_data_home/uv/venvs/${PWD} # PWD will always be the direnv dir
 
@@ -87,6 +87,24 @@ layout_uv() {
     PATH_add "$VIRTUAL_ENV/bin"
     export UV_ACTIVE=1  # or VENV_ACTIVE=1
     export UV_PROJECT_ENVIRONMENT=$VIRTUAL_ENV
+    export VIRTUAL_ENV
+}
+
+layout_uv() {
+    if [[ -d ".venv" ]]; then
+        VIRTUAL_ENV="$(pwd)/.venv"
+    fi
+
+    if [[ -z $VIRTUAL_ENV || ! -d $VIRTUAL_ENV ]]; then
+        log_status "No uv project exists. Executing \`uv init\` to create one."
+        uv init --no-readme
+        rm hello.py
+        uv venv
+        VIRTUAL_ENV="$(pwd)/.venv"
+    fi
+
+    PATH_add "$VIRTUAL_ENV/bin"
+    export UV_ACTIVE=1  # or VENV_ACTIVE=1
     export VIRTUAL_ENV
 }
 
